# overtake

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: on_push.yml  on_release.yml
benchmarks/: main_benchmark.py
examples/: different_number_of_arguments.py  different_output_types.py  leveraging_keyword_arguments.py  recursive.py  recursive_count_words.py  simplest_example.py  simplest_example_beartype.py  simplest_example_pydantic.py  two_arguments.py  variable_number_of_arguments.py
src/overtake/: __init__.py  decorator.py  display_objects.py  incompatibility_reasons.py  lazy_inspection.py  overtake_class.py
src/overtake/runtime_type_checkers/: basic.py  beartype_is_bearable.py  pydantic_type_adapter.py  umbrella.py
tests/: simple_use_cases_test.py  test_args_kwargs.py
