[project]
name = "overtake"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gabrieldemarmiesse", email = "gabrieldemarmiesse@gmail.com" }
]
dependencies = [
    "beartype>=0.12.0",
    "typing-extensions>=4.2.0, <5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.5.1",
    "pytest>=7.4.1",
    "pyright>=1.1.325",
]

[tool.hatch.metadata]
allow-direct-references = true
