[project]
name = "overtake"
version = "0.4.0"
description = "A runtime implementation of @typing.overload."
authors = [
    { name = "Gabriel de Marmiesse", email = "gabrieldemarmiesse@gmail.com" }
]
dependencies = [
    "typing-extensions>=4.7.0, <5",
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]

beartype = [
    "beartype>=0.12.0,<1",
]
pydantic = [
    "pydantic>=2.0,<3"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.5.1",
    "pytest>=7.4.1",
    "pyright>=1.1.325",
    "pre-commit>=3.4.0",
    "line_profiler>=4.1.1",
    "build>=1.0.0",
    "twine>=4.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 88  # Should match the black configuration
# Select rules to apply
select = [
    "E",  # pycodestyle (errors only)
    "F",  # pyflakes
    "T10",  # flake8-debugger
    "I",  # isort
]  # If you need more details on available rules, you can read https://beta.ruff.rs/docs/rules/
ignore = [
    "E501",  # Never enforce `E501` (line length violations), especially the ones already in place.
    "E722",  # Ignore `Do not use bare except, specify exception instead` errors
    "F811",  # Ignore redefinition of unused...  it doesn't understand overloading in function scope.
]
exclude = [".venv"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore `F401` (imported but unused) in all `__init__.py` files.

[tool.ruff.isort]
force-sort-within-sections = true
split-on-trailing-comma = true
